// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pxe Image Type Form Component should render adding a new pxe image type 1`] = `
<div>
  <form
    class="cds--form form-0-2-3 form-react"
    novalidate=""
  >
    <div
      class=""
      id="basic-information"
      name="basic-information"
    >
      <div>
        <h3>
          Basic Information
        </h3>
      </div>
      <div
        class="cds--form-item cds--text-input-wrapper"
      >
        <div
          class="cds--text-input__label-wrapper"
        >
          <label
            class="cds--label"
            dir="auto"
            for="name"
          >
            Name
          </label>
        </div>
        <div
          class="cds--text-input__field-outer-wrapper"
        >
          <div
            class="cds--text-input__field-wrapper"
          >
            <input
              class="cds--text-input"
              id="name"
              maxlength="255"
              name="name"
              type="text"
              value=""
            />
            
            <span
              aria-atomic="true"
              aria-live="assertive"
              class="cds--text-input__counter-alert"
              role="alert"
            />
          </div>
        </div>
      </div>
      <div
        class="cds--form-item"
      >
        <div
          class="cds--select"
        >
          <label
            class="cds--label"
            dir="auto"
            for="provision_type"
          >
            Type
          </label>
          <div
            class="cds--select-input__wrapper"
          >
            <select
              class="cds--select-input"
              id="provision_type"
              name="provision_type"
              title="<Choose>"
            >
              <option
                class="cds--select-option"
                label="<Choose>"
                value=""
              >
                &lt;Choose&gt;
              </option>
              <option
                class="cds--select-option"
                label="Host"
                value="host"
              >
                Host
              </option>
              <option
                class="cds--select-option"
                label="VM and Instance"
                value="vm"
              >
                VM and Instance
              </option>
            </select>
            <svg
              aria-hidden="true"
              class="cds--select__arrow"
              fill="currentColor"
              focusable="false"
              height="16"
              preserveAspectRatio="xMidYMid meet"
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M8 11 3 6 3.7 5.3 8 9.6 12.3 5.3 13 6z"
              />
            </svg>
            
          </div>
        </div>
      </div>
    </div>
    <div
      class="cds--btn-set"
    >
      <button
        class="cds--btn cds--btn--primary cds--btn--disabled"
        disabled=""
        type="submit"
        variant="primary"
      >
        Add
      </button>
      <button
        class="cds--btn cds--btn--secondary"
        type="button"
      >
        Cancel
      </button>
    </div>
  </form>
</div>
`;

exports[`Pxe Image Type Form Component should render editing a pxe image type 1`] = `
<div>
  <form
    class="cds--form form-0-2-3 form-react"
    novalidate=""
  >
    <div
      class=""
      id="basic-information"
      name="basic-information"
    >
      <div>
        <h3>
          Basic Information
        </h3>
      </div>
      <div
        class="cds--form-item cds--text-input-wrapper"
      >
        <div
          class="cds--text-input__label-wrapper"
        >
          <label
            class="cds--label"
            dir="auto"
            for="name"
          >
            Name
          </label>
        </div>
        <div
          class="cds--text-input__field-outer-wrapper"
        >
          <div
            class="cds--text-input__field-wrapper"
          >
            <input
              class="cds--text-input"
              id="name"
              maxlength="255"
              name="name"
              type="text"
              value="foo"
            />
            
            <span
              aria-atomic="true"
              aria-live="assertive"
              class="cds--text-input__counter-alert"
              role="alert"
            />
          </div>
        </div>
      </div>
      <div
        class="cds--form-item"
      >
        <div
          class="cds--select"
        >
          <label
            class="cds--label"
            dir="auto"
            for="provision_type"
          >
            Type
          </label>
          <div
            class="cds--select-input__wrapper"
          >
            <select
              class="cds--select-input"
              id="provision_type"
              name="provision_type"
              title="Host"
            >
              <option
                class="cds--select-option"
                label="<Choose>"
                value=""
              >
                &lt;Choose&gt;
              </option>
              <option
                class="cds--select-option"
                label="Host"
                value="host"
              >
                Host
              </option>
              <option
                class="cds--select-option"
                label="VM and Instance"
                value="vm"
              >
                VM and Instance
              </option>
            </select>
            <svg
              aria-hidden="true"
              class="cds--select__arrow"
              fill="currentColor"
              focusable="false"
              height="16"
              preserveAspectRatio="xMidYMid meet"
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M8 11 3 6 3.7 5.3 8 9.6 12.3 5.3 13 6z"
              />
            </svg>
            
          </div>
        </div>
      </div>
    </div>
    <div
      class="cds--btn-set"
    >
      <button
        class="cds--btn cds--btn--primary cds--btn--disabled"
        disabled=""
        type="submit"
        variant="primary"
      >
        Save
      </button>
      <button
        class="cds--btn cds--btn--secondary cds--btn--disabled"
        disabled=""
        type="button"
      >
        Reset
      </button>
      <button
        class="cds--btn cds--btn--secondary"
        type="button"
      >
        Cancel
      </button>
    </div>
  </form>
</div>
`;
